fix: fix discount vertical alignment

--- a/src/sass/blocks/m-quiz.scss
+++ b/src/sass/blocks/m-quiz.scss
@@ -381,6 +381,7 @@
 
     @media (max-width: $lg) {
       font-size: 18px;
+      margin-top: 10px;
     }
   }
 
@@ -397,7 +398,7 @@
     font-weight: 700;
 
     @media (max-width: $lg) {
-      margin: 20px 0;
+      margin: 35px 0;
     }
   }
 
